--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ table {
 /* root */
 :root{
     --color-fondo: black;
+    --img-fondo: url('/img/yLwLzbz.png');
 }
 
 /* Fin root */
@@ -65,8 +66,13 @@ table {
     
 }
 
-body{
-    background-color: black;
+
+.imagenFondo{
+    background-image: var(--img-fondo);
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    z-index: -1;
 }
 
 header{
@@ -74,9 +80,17 @@ header{
     
 }
 
+.card{
+    max-width: 65%;
+    margin-left: 2rem;
+    margin-bottom: 2rem;
+    background-color: rgba(255, 255, 255, 0.8);
+}
 
 
 
 footer{
     margin-top: 2rem;
+    
+
 }
