--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,6 @@ table {
 :root{
     --color-fondo: black;
     --img-fondo: url('../img/yLwLzbz.png');
-    --texto-color: #bbdde3;
 }
 
 /* Fin root */
@@ -88,21 +87,52 @@ header{
     background-color: rgba(255, 255, 255, 0.8);
 }
 
-
-
 footer{
     margin-top: 2rem;
+    
+
+}
+main img{
+    display: block;
+    margin: 0 auto;
+    border-radius: 5px;
 }
 
-/*Login*/
-/*input fondo y texto*/
-.back{
-    background-color: transparent;
-    color: var(--texto-color);
-    border: 1px solid var(--texto-color);
+main a{  
+    display: block;
+    text-align: center;
+    width: 100px;
+    margin: 0 auto;   
 }
 
-.back:focus{
-    background-color: rgba(0, 0, 0, 0.75);
-    color: var(--texto-color);
+h2 {
+    color: white;
+    font-size: 50px;
+    text-align: left;
+   
 }
+.social-icons {
+    text-align: center;
+    margin-top: 8px;
+  }
+  .social-icon {
+    margin: 5px;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  .social-icon i {
+    background: rgb(17, 141, 223);
+    color: white;
+    width: 36px;
+    height: 36px;
+    line-height: 36px;
+    text-align: center;
+    font-size: 18px;
+    border-radius: 5px;
+  }
+  
+  /* Efecto al pasar el mouse sobre los iconos */
+  .social-icon:hover {
+    opacity: 0.7;
+  }
